--- a/src/styles/components/LandingPage.css
+++ b/src/styles/components/LandingPage.css
@@ -57,9 +57,8 @@
 }
 .landing__page__right {
   display: none;
-  width: 30%;
-  height: auto;
-  max-height: 600px;
+  width: 0;
+  height: 0;
   object-fit: contain;
 }
 
@@ -89,6 +88,8 @@
   }
   .landing__page__right {
     width: 30%;
+    height: auto;
+    max-height: 600px;
     display: inline-block;
   }
 }
@@ -99,8 +100,10 @@
   }
   .landing__page__right {
     display: inline-block;
-    width: 30%;
     margin-right: 2%;
+    width: 30%;
+    height: auto;
+    max-height: 600px;
   }
 }
 
@@ -110,8 +113,10 @@
   }
   .landing__page__right {
     display: inline-block;
-    width: 28%;
     margin-right: 5%;
+    width: 28%;
+    height: auto;
+    max-height: 600px;
   }
   .landing__page__container {
     padding: 80px 28px;
